# WEB_HW_10

./: pyproject.toml
HW_10/: manage.py
HW_10/HW_10/: asgi.py  settings.py  urls.py  wsgi.py
HW_10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
HW_10/quotes/migrations/: 0001_initial.py  0002_author_photo_url.py  0003_alter_author_photo_url.py
HW_10/quotes/static/qoutes/: bckp.css  style.css
HW_10/quotes/templates/quotes/: __author_base.html  add_author.html  add_quote.html  author_quotes.html  base.html  index.html  pagin.html  search_res.html  sidebar.html  tags_index.html
HW_10/quotes/templatetags/: extract.py
HW_10/users/: forms.py  urls.py  views.py
HW_10/users/templates/users/: login.html  logout.html  register.html
HW_10/utils/: add_quotes_to_mongo.py  authors_photos.json  migrations.py  quotes.json
